# 3dbag-runner

./: .actrc  .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  strip-docker-image-export  tyler.html
.github/: dependabot.yml
.github/workflows/: test-linux-x64.yml
docker/: Dockerfile  ahn.json  metadata.city.json
docker/binaries/: cjseq  geof  tyler
docs/: README.md
src/: argo.py  main.py  remove_buildings.py
src/argo/: argodefaults.py  chain_building_workflows.py  createbagdb.py  fixcityjson.py  geluid.py  height.py  indexcityjsons.py  ingest_createbagdb.py  lazdb.py  lazsplit.py  pdok-delivery-secrets.yaml  pdokupdate.py  pdokupdatebuildings.py  pdokupdategeluid.py  prepare_indexlazfiles.py  prepare_splitlaz.py  publish_buildings.py  publish_geluid.py  roofer.py  transform_geluid.py  transform_height.py  transform_roofer.py  transform_splitgpkg.py  transform_tyler.py  transform_zip_cityjson.py  tyler.py  validate_cityjson.py  validate_fixcityjson.py  validatecityjson.py
src/debugtools/: listfiles.py
src/roofhelper/cityjson/: geluid.py
src/roofhelper/defautlogging/: __init__.py
src/roofhelper/io/: AbstractSchemeFileHandler.py  AzureSchemeFileHandler.py  EntryProperties.py  FileHandle.py  FileSchemeFileHandler.py  SchemeFileHandler.py  __init__.py
src/roofhelper/kadaster/: bag.py  geo.py
src/roofhelper/pdok/: PdokDelivery.py  PdokDeliveryGebouw.py  PdokDeliveryProperties.py  PdokDeliverySound.py  PdokGeopackageWriter.py  PdokS3Uploader.py  PdokUpdateTrigger.py  UploadResult.py  __init__.py
src/roofhelper/pointcloud/: laz.py
src/roofhelper/processing/: __init__.py
src/roofhelper/roofer/: OutputAttributesConfig.py  PointCloudConfig.py  RooferConfig.py  (+1 more)
tests/: README.md  test_azure_scheme_handler.py  test_file_scheme_handler.py  test_navigate_behavior.py  test_scheme_handler.py  test_translate_cityjson.py
(+2 files in other folders)
